--- a/nodejs/p082_catch로에러처리방법_예제2.html
+++ b/nodejs/p082_catch로에러처리방법_예제2.html
@@ -8,37 +8,22 @@
 </head>
 <body>
     <script>
-        const face = Math.random()<0.7 // true 가 70% 확률이 됨
-        const watch = () =>{
-            return new Promise((resolve, reject)=>{
-                setTimeout(()=>resolve('이상형 발견!!😍😍'),1000)
-            })
-        }
-        const talk = (num) =>{
-            return new Promise((resolve, reject)=>{
-                setTimeout(()=>{
-                if(face){
-                    resolve(num + '=> 연럭처💌 좀 주세요.💦💟')
+        const pm = new Promise((resolve, reject)=>{
+            console.log('first Loading...');
+            let what = Math.random() < 0.5
+            setTimeout(()=>{
+                if (what){
+                    resolve('정상처리완료')                    
                 }else{
-                    reject(new Error(num + '=> 바로 철벽!! ❌✋'))
+                    reject(new Error('문제가 생겼음'))
                 }
-            },1000)
-            })
-        }
-        const take = (seeu) => {
-            return new Promise((resolve, reject)=>{
-                setTimeout(()=>resolve(seeu+'=> 또만나요!!🙋‍♂️🙋‍♀️'),1000)
-            })
-        }
-    watch()
-        .then(talk)
-        .catch((me)=>{
-            return me + '혼자있고 싶어요.'
+            },2000)
         })
-        .then(take)
-        .then(console.log)
-        .catch(console.log)
-
+        pm
+          .then(v=>console.log(v))
+          .catch(e=>console.log(e)) // 에러캐치
+          .finally(()=>console.log('통신이 종료됨')) // 아무인자도 받지않아도 됨
+        
     </script>
 </body>
 </html>
