--- a/nodejs/p083_promiseAll로직_예제1_1.html
+++ b/nodejs/p083_promiseAll로직_예제1_1.html
@@ -20,7 +20,7 @@
         }
 
         /* 일반비동기 */
-        const testgo = async ()=>{
+        const testgo = async ()=>{ // 최종 처리된 시간이 6초가 걸림
         console.time('일반비동기')
         await test('코딩',3000)
         await test('coding',2000)
